# magrustte

./: .gitignore  Cargo.toml  README.md
src/: driver.rs  filters.rs  imgarray.rs  linalg.rs  main.rs
src/filters/: bilateral.rs  blur.rs  compose.rs  grayscale.rs  huerotate.rs  invert.rs  lighting.rs  sepia.rs  sharpen.rs  threshold.rs  vignette.rs
