[package]
name = "image_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
native-dialog = "0.7.0"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
fltk = { version = "^1.4", features = ["fltk-bundled"] }


